# mbr-markdown-browser

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOP.md  README.md  TODO.md  build.rs  flake.nix  mbr-icon.ai  rust-toolchain.toml  test-blockquotes.md  test-simple.md  uniffi-bindgen.rs
.cargo/: config.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
.mbr/templates/: index.html
benches/: cache_operations.rs  fixtures.rs  html_output.rs  link_processing.rs  markdown_render.rs  path_resolver.rs  repo_scan.rs  search.rs  sorting.rs  template_render.rs
components/: README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vite.editor.config.ts  vite.genealogy.config.ts  vite.graph.config.ts  vitest.config.ts
components/mocks/: pagefind.js
components/src/: dynamic-loader.ts  editor-crepe.ts  editor-css.d.ts  editor-frontmatter.test.ts  editor-frontmatter.ts  main.js  mbr-browse-single.ts  mbr-browse.test.ts  mbr-browse.ts  mbr-editor.test.ts  mbr-editor.ts  mbr-footnote-preview.test.ts  mbr-footnote-preview.ts  mbr-fuzzy-nav.ts  mbr-genealogy.test.ts  mbr-genealogy.ts  mbr-heading-enhancer.test.ts  mbr-heading-enhancer.ts  mbr-hljs.ts  mbr-info.test.ts  mbr-info.ts  mbr-jump.ts  mbr-katex.ts  mbr-keys.test.ts  mbr-keys.ts  mbr-link-enhancement.ts  mbr-live-reload.ts  mbr-media-browser.ts  mbr-media-viewer.ts  mbr-mermaid.ts  mbr-nav.test.ts  mbr-nav.ts  mbr-navloader.ts  mbr-page-errors.ts  mbr-relationships.test.ts  mbr-relationships.ts  mbr-search.ts  mbr-sidebar-trigger.ts  mbr-slides.ts  mbr-video-extras.ts  (+9 more)
components/src/components/: Link.svelte
components/src/editor-stubs/: codemirror-language-data.ts
components/src/genealogy/: chart-registry.ts  family-chart-data.test.ts  family-chart-data.ts  family-chart-view.ts  index.ts  selector.test.ts  selector.ts  timeline-layout.test.ts  timeline-layout.ts  timeline-view.ts
components/src/graph/: bfs.test.ts  bfs.ts  build.test.ts  build.ts  index.ts  links-cache.test.ts  links-cache.ts  mbr-mini-graph.test.ts  mbr-mini-graph.ts  relationship-graph.test.ts  relationship-graph.ts  test-fixtures.ts  viewport-controller.test.ts  viewport-controller.ts  viewport.test.ts  viewport.ts
docs/: index.md  integration.md
docs/.mbr/: config.toml  user.css
docs/benchmarks/: data.json  index.md
docs/customization/: components.md  index.md  sorting.md  templates.md  themes.md
docs/examples/: test-slides.md
docs/features/: tags.md
docs/getting-started/: index.md  quickstart.md
docs/markdown/: index.md  kanban.md  media.md  relationships.md  slides.md  test-slides.md  vid-shortcode.md
docs/modes/: build.md  editing.md  gui.md  index.md  quicklook.md  server.md
docs/reference/: architecture.md  cli.md  configuration.md  development.md  index.md  integration.md  keyboard-shortcuts.md  tags.md
docs/videos/: demo.mp4.captions.en.vtt  demo.mp4.chapters.en.vtt
macos/: AppIcon.icns
macos/MBR.app-template/Contents/Resources/: AppIcon.icns
macos/MBR.app/Contents/: Info.plist
macos/MBR.app/Contents/MacOS/: mbr
quicklook/: .swiftformat  .swiftlint.yml  DEVELOP.md  build.sh  project.yml
quicklook/Host/: Info.plist  MBRQuickLookHostApp.swift
quicklook/MBRPreview/: Info.plist  MBRPreview.entitlements  PreviewViewController.swift
quicklook/MBRPreviewTests/: PreviewViewControllerTests.swift
scripts/: build-macos-app.sh  bump-version.sh  cachix-push.sh  save-benchmarks.sh  sync-npm-deps.sh  update-assets.sh
src/: attrs.rs  audio.rs  browser.rs  build.rs  cache.rs  cli.rs  config.rs  constants.rs  edit_auth.rs  embedded_hljs.rs  embedded_katex.rs  embedded_pico.rs  errors.rs  html.rs  lib.rs  link_grep.rs  link_index.rs  link_transform.rs  main.rs  markdown.rs  mbr.udl  media.rs  oembed.rs  oembed_cache.rs  page_context.rs  page_errors.rs  path_resolver.rs  pdf_metadata.rs  quicklook.rs  readability.rs  relationships.rs  repo.rs  search.rs  server.rs  sorting.rs  tag_index.rs  templates.rs  vid.rs  video_metadata.rs  video_metadata_cache.rs  (+5 more)
templates/: _breadcrumbs.html  _display_enhancements.html  _footer.html  _footer_custom.html  _head.html  _head_markdown.html  _info_panel.html  _nav.html  _person_infobox.html  _scripts.html  _scripts_markdown.html  error.html  home.html  index.html  media_viewer.html  reveal-slides.css  reveal.theme.black.5.2.1.css  reveal.theme.blank.5.2.1.css  reveal.theme.white.5.2.1.css  section.html  tag.html  tag_index.html  theme.css  vid.js  vidstack.player.1.11.21.css  vidstack.plyr.1.11.21.css
tests/: build_integration.rs  parse_integration.rs  server_integration.rs
tests/common/: mod.rs
tests/fixtures/genealogy/: index.md
tests/fixtures/genealogy/.mbr/: config.toml
tests/fixtures/genealogy/people/: alice.md  george.md  john.md  martha.md  mary.md  robert.md  sam.md
