[package]
name = "mbr"
version = "0.3.3"
edition = "2024"
authors = ["zmre"]
license = "MIT"
readme = "README.md"
description = "A markdown viewer and browser"
repository = "https://github.com/zmre/mbr"
keywords = ["static", "site", "generator"]
build = "build.rs"

include = ["src/**/*", "LICENSE", "README.md"]

[lib]
crate-type = ["lib", "staticlib"]
name = "mbr"

[features]
default = ["gui", "media-metadata"]
# GUI feature enables native window/browser functionality (wry, tao, muda, rfd)
# Disable for QuickLook builds: cargo build --release --no-default-features
gui = ["dep:wry", "dep:tao", "dep:muda", "dep:rfd"]
# Media metadata extraction (requires ffmpeg) - disable for QuickLook to avoid SDL dependency
media-metadata = ["dep:metadata", "dep:ffmpeg-next"]
# FFI for QuickLook extension - only needed when building the staticlib
ffi = ["dep:uniffi"]

[dependencies]
# winit = "0.30.11"
axum = { version = "0.8", features = ["http1", "http2", "json", "tokio", "tracing", "ws"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4.5", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3.31"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
glob = "0.3.3"
notify = { version = "8.2", default-features = false, features = ["macos_kqueue"] }
html-escape = "0.2.13"
itertools = "0.14.0"
metadata = { version = "0.1.10", optional = true } # Requires ffmpeg for video/audio metadata extraction
ffmpeg-next = { version = "7.1", optional = true }  # Direct dep to control log level (suppress warnings from metadata crate)
papaya = "0.2.3"
pathdiff = "0.2.3"
lopdf = { version = "0.39", default-features = false, features = ["rayon"] }
percent-encoding = "2.3"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html", "simd"] }
pulldown-cmark-escape = { version = "0.11", default-features = false }
rayon = "1.11"
regex = "1.11"
reqwest = { version = "0.13", default-features = false, features = ["json"] }
scraper = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = { version = "1.20", features = ["preserve_order", "date-locale"] }
time = "0.3"
tokio = {version="1.47", features = ["rt-multi-thread", "macros", "sync", "time", "net", "fs", "io-util"]}
tokio-util = { version = "0.7", features = ["io"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "set-header", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
walkdir = "2.5"
thiserror = "2.0"
parking_lot = "0.12"
uniffi = { version = "0.31", features = ["cli", "bindgen"], optional = true }
yaml-rust2 = "0.11"
# GUI dependencies (optional, enabled by default "gui" feature)
wry = { version = "0.54", default-features = true, features = ["devtools", "fullscreen"], optional = true }

# Search functionality
nucleo-matcher = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
pagefind = "1.4"

# Image processing with minimal features (only needed formats)
image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# GUI dependencies (optional, enabled by default "gui" feature)
tao = { version = "0.34.0", optional = true }
muda = { version = "0.17", optional = true }
rfd = { version = "0.17", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
muda = { version = "0.17", features = ["gtk", "libxdo"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
flate2 = "1.0"
proptest = "1.5"
tempfile = "3.14"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["ffi"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 16
panic = 'abort'
strip = 'debuginfo'
